add external dns entry for lb to k8s template

--- a/k8s.yaml.template
+++ b/k8s.yaml.template
@@ -62,6 +62,8 @@ metadata:
     app: ${APPNAME}
   name: ${APPNAME}
   namespace: apps
+  annotations:
+  dns.alpha.kubernetes.io/external: ${APP}
 spec:
   selector:
     app: ${APPNAME}
